--- a/frontend/index.html
+++ b/frontend/index.html
@@ -89,7 +89,7 @@
     if (role === 'admin') {
       document.getElementById('adminDashboard').style.display = 'block';
       document.getElementById('register').style.display = 'none';
-      loadDashboard();
+      initializeDB().then(() => loadDashboard());
     } else {
       document.getElementById('register').style.display = 'block';
       document.getElementById('adminDashboard').style.display = 'none';
@@ -102,15 +102,20 @@
     }
 
     let db;
-    const request = indexedDB.open('eventDB', 1);
-    request.onupgradeneeded = () => {
-      db = request.result;
-      db.createObjectStore('users', { keyPath: 'id' });
-    };
-    request.onsuccess = () => {
-      db = request.result;
-      if (role === 'admin') loadUsers();
-    };
+    function initializeDB() {
+      return new Promise((resolve, reject) => {
+        const request = indexedDB.open('eventDB', 1);
+        request.onupgradeneeded = () => {
+          db = request.result;
+          db.createObjectStore('users', { keyPath: 'id' });
+        };
+        request.onsuccess = () => {
+          db = request.result;
+          resolve();
+        };
+        request.onerror = () => reject(request.error);
+      });
+    }
 
     async function fetchWithRetry(url, options, retries = 3, delay = 2000) {
       for (let i = 0; i < retries; i++) {
@@ -158,7 +163,7 @@
           const qrImage = document.getElementById('qrImage');
           qrImage.src = 'data:image/png;base64,' + result.qr_code;
           document.getElementById('qrContainer').style.display = 'block';
-          sendEmail(email, result.qr_code); // Enviar QR por email
+          // sendEmail(email, result.qr_code); // Descomenta si SES está configurado
           alert('Registrado! QR generado y enviado a tu email.');
           document.getElementById('name').value = '';
           document.getElementById('email').value = '';
@@ -172,16 +177,6 @@
         alert('Error de red: ' + error.message + '.');
         console.error('Error detallado:', error);
       }
-    }
-
-    function sendEmail(email, qrCode) {
-      fetch('https://event-registration-system-9yji.onrender.com/api/send-email', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ email: email, qrCode: qrCode })
-      }).then(response => response.text())
-        .then(text => console.log('Email enviado:', text))
-        .catch(error => console.error('Error enviando email:', error));
     }
 
     function downloadQR() {
@@ -198,12 +193,14 @@
           method: 'GET'
         });
         const users = JSON.parse(text);
-        const tx = db.transaction(['users'], 'readwrite');
-        const store = tx.objectStore('users');
-        users.forEach(user => store.put(user));
-        updateStats();
-        alert('Datos descargados para offline');
-        if (role === 'admin') loadUsers();
+        if (db) {
+          const tx = db.transaction(['users'], 'readwrite');
+          const store = tx.objectStore('users');
+          users.forEach(user => store.put(user));
+          updateStats();
+          alert('Datos descargados para offline');
+          if (role === 'admin') loadUsers();
+        }
       } catch (error) {
         alert('Error al descargar datos: ' + error.message);
       }
@@ -240,144 +237,158 @@
     }
 
     function checkInUser(userId) {
-      const tx = db.transaction(['users'], 'readwrite');
-      const store = tx.objectStore('users');
-      store.get(parseInt(userId)).onsuccess = (e) => {
-        const user = e.target.result;
-        if (user) {
-          if (user.checked_in) {
-            document.getElementById('checkinStatus').textContent = `QR inválido o ya usado: ${user.name}`;
-            document.getElementById('checkinStatus').style.display = 'block';
+      if (db) {
+        const tx = db.transaction(['users'], 'readwrite');
+        const store = tx.objectStore('users');
+        store.get(parseInt(userId)).onsuccess = (e) => {
+          const user = e.target.result;
+          if (user) {
+            if (user.checked_in) {
+              document.getElementById('checkinStatus').textContent = `QR inválido o ya usado: ${user.name}`;
+              document.getElementById('checkinStatus').style.display = 'block';
+            } else {
+              user.checked_in = true;
+              store.put(user);
+              document.getElementById('checkinStatus').textContent = `Check-in confirmado: ${user.name}`;
+              document.getElementById('checkinStatus').style.display = 'block';
+              updateStats();
+              loadUsers();
+            }
           } else {
-            user.checked_in = true;
-            store.put(user);
-            document.getElementById('checkinStatus').textContent = `Check-in confirmado: ${user.name}`;
+            document.getElementById('checkinStatus').textContent = 'QR inválido';
             document.getElementById('checkinStatus').style.display = 'block';
-            updateStats();
-            loadUsers();
           }
-        } else {
-          document.getElementById('checkinStatus').textContent = 'QR inválido';
-          document.getElementById('checkinStatus').style.display = 'block';
-        }
-      };
+        };
+      }
     }
 
     async function syncData() {
-      const tx = db.transaction(['users'], 'readonly');
-      const store = tx.objectStore('users');
-      const request = store.getAll();
-      request.onsuccess = async () => {
-        const users = request.result.filter(u => u.checked_in);
-        try {
-          const { response, text } = await fetchWithRetry('https://event-registration-system-9yji.onrender.com/api/sync', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify(users)
-          });
-          const result = JSON.parse(text);
-          alert(result.message);
-          updateStats();
-          loadUsers();
-        } catch (error) {
-          alert('Error al sincronizar: ' + error.message);
-        }
-      };
+      if (db) {
+        const tx = db.transaction(['users'], 'readonly');
+        const store = tx.objectStore('users');
+        const request = store.getAll();
+        request.onsuccess = async () => {
+          const users = request.result.filter(u => u.checked_in);
+          try {
+            const { response, text } = await fetchWithRetry('https://event-registration-system-9yji.onrender.com/api/sync', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify(users)
+            });
+            const result = JSON.parse(text);
+            alert(result.message);
+            updateStats();
+            loadUsers();
+          } catch (error) {
+            alert('Error al sincronizar: ' + error.message);
+          }
+        };
+      }
     }
 
     function updateStats() {
-      const tx = db.transaction(['users'], 'readonly');
-      const store = tx.objectStore('users');
-      const request = store.getAll();
-      request.onsuccess = () => {
-        const users = request.result;
-        document.getElementById('totalAttendees').textContent = users.length;
-        const hourAttendees = users.filter(u => u.checked_in).length;
-        document.getElementById('hourAttendees').textContent = hourAttendees;
-        if (role === 'admin') {
-          updateChart();
-        }
-      };
+      if (db) {
+        const tx = db.transaction(['users'], 'readonly');
+        const store = tx.objectStore('users');
+        const request = store.getAll();
+        request.onsuccess = () => {
+          const users = request.result;
+          document.getElementById('totalAttendees').textContent = users.length;
+          const hourAttendees = users.filter(u => u.checked_in).length;
+          document.getElementById('hourAttendees').textContent = hourAttendees;
+          if (role === 'admin') {
+            updateChart();
+          }
+        };
+      }
     }
 
     function loadUsers() {
-      const tx = db.transaction(['users'], 'readonly');
-      const store = tx.objectStore('users');
-      const request = store.getAll();
-      request.onsuccess = () => {
-        const users = request.result;
-        const tbody = document.getElementById('usersTableBody');
-        tbody.innerHTML = '';
-        users.forEach(user => {
-          const row = document.createElement('tr');
-          row.innerHTML = `<td>${user.name}</td><td>${user.email}</td><td>${user.checked_in ? 'Sí' : 'No'}</td>`;
-          tbody.appendChild(row);
-        });
-      };
+      if (db) {
+        const tx = db.transaction(['users'], 'readonly');
+        const store = tx.objectStore('users');
+        const request = store.getAll();
+        request.onsuccess = () => {
+          const users = request.result;
+          const tbody = document.getElementById('usersTableBody');
+          tbody.innerHTML = '';
+          users.forEach(user => {
+            const row = document.createElement('tr');
+            row.innerHTML = `<td>${user.name}</td><td>${user.email}</td><td>${user.checked_in ? 'Sí' : 'No'}</td>`;
+            tbody.appendChild(row);
+          });
+        };
+      }
     }
 
     function filterUsers() {
-      const filter = document.getElementById('filterPassType').value;
-      const tx = db.transaction(['users'], 'readonly');
-      const store = tx.objectStore('users');
-      const request = store.getAll();
-      request.onsuccess = () => {
-        const users = request.result;
-        const tbody = document.getElementById('usersTableBody');
-        tbody.innerHTML = '';
-        users.filter(user => filter === 'all' || user.passType === filter).forEach(user => {
-          const row = document.createElement('tr');
-          row.innerHTML = `<td>${user.name}</td><td>${user.email}</td><td>${user.checked_in ? 'Sí' : 'No'}</td>`;
-          tbody.appendChild(row);
-        });
-      };
+      if (db) {
+        const filter = document.getElementById('filterPassType').value;
+        const tx = db.transaction(['users'], 'readonly');
+        const store = tx.objectStore('users');
+        const request = store.getAll();
+        request.onsuccess = () => {
+          const users = request.result;
+          const tbody = document.getElementById('usersTableBody');
+          tbody.innerHTML = '';
+          users.filter(user => filter === 'all' || user.passType === filter).forEach(user => {
+            const row = document.createElement('tr');
+            row.innerHTML = `<td>${user.name}</td><td>${user.email}</td><td>${user.checked_in ? 'Sí' : 'No'}</td>`;
+            tbody.appendChild(row);
+          });
+        };
+      }
     }
 
     function exportToExcel() {
-      const tx = db.transaction(['users'], 'readonly');
-      const store = tx.objectStore('users');
-      const request = store.getAll();
-      request.onsuccess = () => {
-        const users = request.result;
-        let csv = 'Nombre,Email,Check-in\n';
-        users.forEach(user => {
-          csv += `${user.name},${user.email},${user.checked_in}\n`;
-        });
-        const blob = new Blob([csv], { type: 'text/csv' });
-        const link = document.createElement('a');
-        link.href = URL.createObjectURL(blob);
-        link.download = 'users.csv';
-        link.click();
-      };
+      if (db) {
+        const tx = db.transaction(['users'], 'readonly');
+        const store = tx.objectStore('users');
+        const request = store.getAll();
+        request.onsuccess = () => {
+          const users = request.result;
+          let csv = 'Nombre,Email,Check-in\n';
+          users.forEach(user => {
+            csv += `${user.name},${user.email},${user.checked_in}\n`;
+          });
+          const blob = new Blob([csv], { type: 'text/csv' });
+          const link = document.createElement('a');
+          link.href = URL.createObjectURL(blob);
+          link.download = 'users.csv';
+          link.click();
+        };
+      }
     }
 
     function updateChart() {
-      const tx = db.transaction(['users'], 'readonly');
-      const store = tx.objectStore('users');
-      const request = store.getAll();
-      request.onsuccess = () => {
-        const users = request.result;
-        const checkedIn = users.filter(u => u.checked_in).length;
-        const notCheckedIn = users.length - checkedIn;
-        const ctx = document.getElementById('attendanceChart').getContext('2d');
-        new Chart(ctx, {
-          type: 'pie',
-          data: {
-            labels: ['Check-in', 'Sin Check-in'],
-            datasets: [{
-              data: [checkedIn, notCheckedIn],
-              backgroundColor: ['#34a853', '#e74c3c']
-            }]
-          },
-          options: {
-            responsive: true,
-            plugins: {
-              legend: { position: 'top' },
-              title: { display: true, text: 'Estadísticas de Asistencia' }
+      if (db) {
+        const tx = db.transaction(['users'], 'readonly');
+        const store = tx.objectStore('users');
+        const request = store.getAll();
+        request.onsuccess = () => {
+          const users = request.result;
+          const checkedIn = users.filter(u => u.checked_in).length;
+          const notCheckedIn = users.length - checkedIn;
+          const ctx = document.getElementById('attendanceChart').getContext('2d');
+          new Chart(ctx, {
+            type: 'pie',
+            data: {
+              labels: ['Check-in', 'Sin Check-in'],
+              datasets: [{
+                data: [checkedIn, notCheckedIn],
+                backgroundColor: ['#34a853', '#e74c3c']
+              }]
+            },
+            options: {
+              responsive: true,
+              plugins: {
+                legend: { position: 'top' },
+                title: { display: true, text: 'Estadísticas de Asistencia' }
+              }
             }
-          }
-        });
-      };
+          });
+        };
+      }
     }
 
     function loadDashboard() {
